# python_mqtt_kafka

./: .dockerignore  .env  .env_samples  .gitignore  .pylintrc  Dockerfile.consumer  README.MD  docker-compose-kafk-env.yml  docker-compose-kafka.yml  docker-compose-mongo.yml  docker-compose-mqtt.yml  docker-compose.yml  functions_kafka.py  functions_mqtt.py  functions_mqtt_kafka_common.py  kafka_consumer.py  kafka_producer.py  mqtt_kafka_bridge_pub.py  mqtt_kafka_bridge_sub.py  mqtt_kafka_parallel_pub.py  mqtt_kafka_parallel_sub.py  pyproject.toml  steps.txt  variables.py
grafana/: grafana.db  grafana.db-shm  grafana.db-wal
grafana/config/: grafana.ini
mosquitto/config/: mosquitto.conf  password.txt
mosquitto/data/: mosquitto.db
prometheus/: kafka_broker.yml  prometheus.yml
prometheus/01H3FCSPRPBTGY2425FHNY6E09/: index  meta.json
prometheus/01H3FCSPRPBTGY2425FHNY6E09/chunks/: 000001
prometheus/01H3FCSQQ1ZD3YCS8MH92BTE41/: index  meta.json
prometheus/01H3FCSQQ1ZD3YCS8MH92BTE41/chunks/: 000001
prometheus/chunks_head/: 000002
prometheus/wal/: 00000000  00000001  00000002
