[tool.poetry]
name = "python_mqtt_kafka"
version = "0.1.0"
description = "Interação MQTT e Kafka"
authors = ["malki-çedheq <https://github.com/malki-cedheq>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.7, <=3.10.13"
paho-mqtt = "*"
pykafka = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"     # https://github.com/taskipy/taskipy
pytest = "^7.4.3"       # https://github.com/pytest-dev/pytest/
pytest-cov = "^4.1.0"   # https://github.com/pytest-dev/pytest-cov
isort = "^5.12.0"       # https://github.com/pycqa/isort/
ruff = "^0.1.6"         # https://github.com/astral-sh/ruff
black = "^23.11.0"      # https://github.com/psf/black

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.black]
extend-exclude = '(migrations/)'
line_length = 88

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.taskipy.tasks]
lint = 'ruff . && black --check . --diff'
format = 'black .  && isort .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
export_libs = 'poetry export -f requirements.txt --output requirements.txt'
run_consumer = 'poetry run python kafka_consumer.py'
run_producer = 'poetry run python kafka_producer.py'
run_parallel_pub = 'poetry run python mqtt_kafka_parallel_pub.py'
run_parallel_sub = 'poetry run python mqtt_kafka_parallel_sub.py'
run_bridge_pub = 'poetry run python mqtt_kafka_bridge_pub.py'
run_bridge_sub = 'poetry run python mqtt_kafka_bridge_sub.py'